--- a/lab 2/Lab02_2023W.ipynb
+++ b/lab 2/Lab02_2023W.ipynb
@@ -1050,7 +1050,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1074,6 +1076,137 @@
     "plt.hist(pop_norm, bins= 100, density=True);\n",
     "print('REAL mean: %.2f; std: %.2f' % (np.mean(pop_norm), np.std(pop_norm)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>103.709330</td>\n",
+       "      <td>48.706852</td>\n",
+       "      <td>0.410932</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102.755336</td>\n",
+       "      <td>46.677363</td>\n",
+       "      <td>0.246559</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103.709330</td>\n",
+       "      <td>47.692108</td>\n",
+       "      <td>0.250465</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>101.714615</td>\n",
+       "      <td>45.740676</td>\n",
+       "      <td>0.189795</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>102.755336</td>\n",
+       "      <td>46.677363</td>\n",
+       "      <td>0.226997</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            X          Y  Pressure  Time\n",
+       "0  103.709330  48.706852  0.410932     0\n",
+       "1  102.755336  46.677363  0.246559     2\n",
+       "2  103.709330  47.692108  0.250465     2\n",
+       "3  101.714615  45.740676  0.189795    16\n",
+       "4  102.755336  46.677363  0.226997    16"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data folder:\n",
+    "# 'signature_samples/biometrics/'\n",
+    "# 'signature_samples/calgary/'\n",
+    "# 'signature_samples/hello/'\n",
+    "\n",
+    "# 'genuine' or 'impostor'\n",
+    "subdir = 'impostor/'\n",
+    "data_dir = 'biometrics/' + subdir\n",
+    "\n",
+    "csv_file = pd.read_csv(data_dir + '2.csv')\n",
+    "\n",
+    "coord1 = csv_file[['X', 'Y']].to_numpy()\n",
+    "time1 = csv_file['Time'].to_numpy().reshape((-1,1))\n",
+    "prs1 = csv_file['Pressure'].to_numpy().reshape((-1,1))\n",
+    "\n",
+    "csv_file.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
