--- a/lab 2/Lab02.ipynb
+++ b/lab 2/Lab02.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Lab 2:\n",
     "\n",
-    "* Team member Abid Al Labib \n",
+    "* Team member - Abid Al Labib \n",
     "    - UCID: 30070079\n",
     "* Team member - Madhu Selvaraj\n",
     "    - UCID: 30061979\n",
@@ -32,7 +32,7 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "...."
+    "The purpose of this lab was to familiarize ourselves with biometric data collection in the form of signature acquisition, as well as to perform statistical analysis to visualize the data and better understand the difference in distributions of different variables. Additionally, another objective of the lab was to gain more insight into the differences between the genuine and imposter samples prior to matching."
    ]
   },
   {
@@ -733,12 +733,14 @@
    "source": [
     "### Comparision of the genuine and imposter distributions:\n",
     "\n",
-    "...."
+    "Comparing the genuine and imposter distributions, we see that for pressure, the genuine signatures had less deviation, indicating that each signature was written with a relatively similar amount of pressure. However, the spread in the imposter distribution is larger, indicating that an inconsistent amount of pressue was used with each signature. Additionally, the difficulty to replicate the pressue being used when writing a signature is shown in the difference in mean average pressue values. \n",
+    "\n",
+    "The main difference between the velocity distribution for the genuine and imposter samples is the deviation, with the genuine samples having less spread indicating that signatures were mostly written at the same speed. The velocity of the imposter signatures appears to be less consistent among samples. However, the mean values are relatively close with the imposter having a higher average velocity when writing signatures compared to the individual that is genuine. As the two distributions are relatively close in distance, there will likely be a high number of false matches and false non-matches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +777,6 @@
     "plt.title('Velocity Distribution')\n",
     "plt.legend(['Genuine - Mean: {mean:.2f}, Std: {std:.2f}'.format(mean=mean_vel_g, std=std_vel_g), \n",
     "'Imposter - Mean: {mean:.2f}, Std: {std:.2f}'.format(mean=mean_vel_i, std=std_vel_i)])\n",
-    "plt.show()\n",
     "\n",
     "plt.show()\n"
    ]
