added the conclusion

--- a/lab 2/Lab02.ipynb
+++ b/lab 2/Lab02.ipynb
@@ -788,7 +788,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "...."
+    "In this lab, we first observed that increasing the sample size and the number of bins when plotting a histogram results in a distribution that more closely resembles the normal distribution. We then became familiar with data visualization and color maps, as well as plotting the distribution of pressue values for a single sample signature. We then did further analysis of the data to plot a velocity map, and became familiar with visualizing data in both 2d and 3d spaces. Finally, we gained more insight into the 30 genuine and imposter signatures we collected. Overall we found that the two distributions are fairly similar, especially for average velocity values, which will likely result in a large number of false matches and false non-matches in future analysis."
    ]
   },
   {
