minor changes to explanations

--- a/lab 2/Lab02.ipynb
+++ b/lab 2/Lab02.ipynb
@@ -619,10 +619,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To analyze the pressue and velocity measurements of the 30 imposter signatures, we follow the exact same process as exercise 4 with the imposter signature measurement files. "
+    "To analyze the pressue and velocity measurements of the imposter signatures, we follow the exact same process as exercise 4 with the 30 forged signatures we collected. "
    ]
   },
   {
@@ -695,12 +696,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Comparision of the genuine and imposter distributions:\n",
     "\n",
-    "Comparing the genuine and imposter distributions, we see that for pressure, the genuine signatures had less deviation, indicating that each signature was written with a relatively similar amount of pressure. However, the spread in the imposter distribution is larger, indicating that an inconsistent amount of pressue was used with each signature. Additionally, the difficulty to replicate the pressue being used when writing a signature is shown in the difference in mean average pressue values. \n",
+    "Comparing the genuine and imposter distributions, we see that for pressure, the genuine signatures had less deviation, indicating that each signature was written with a relatively similar amount of pressure. However, the spread in the imposter distribution is larger, indicating that an inconsistent amount of pressue was used with each signature. Additionally, the difficulty to replicate the pressue being used when forging a signature is shown in the difference in mean average pressue values. \n",
     "\n",
     "The main difference between the velocity distribution for the genuine and imposter samples is the deviation, with the genuine samples having less spread indicating that signatures were mostly written at the same speed. The velocity of the imposter signatures appears to be less consistent among samples. However, the mean values are relatively close with the imposter having a higher average velocity when writing signatures compared to the individual that is genuine. As the two distributions are relatively close in distance, there will likely be a high number of false matches and false non-matches."
    ]
