--- a/lab3/Lab03.ipynb
+++ b/lab3/Lab03.ipynb
@@ -24,7 +24,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -340,7 +339,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -589,7 +587,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -606,7 +603,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -708,11 +704,19 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "![Ex 3 Work](ex3.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion:\n",
+    "\n",
+    "In this lab we learned about Gaussian mixture model(GMM), we saw how changing the training dataset size and number of components affects mean and std of the GMM scores. Later on we used the mean and std of one of the GMM's scores to find the FAR and FRR of that population. We then increased the critical region by altering the critical values and created new confidence intervals which was then used to find new FAR and FRR values. This lab gave us a great practical experience on how to compute FAR and FRR from a given population, in this case it was from GMM scores.  "
    ]
   }
  ],
@@ -732,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
