--- a/lab 5/lab05.ipynb
+++ b/lab 5/lab05.ipynb
@@ -284,6 +284,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f39cf144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using a single right thumb print as the probe image (r3)\n",
+    "probe_img = img_as_ubyte(imread('fingerprints/r3.bmp', as_gray=True))\n",
+    "probe_fp = fingerprint_processing(probe_img, block_size=12, threshold=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "84cd58c5",
    "metadata": {
@@ -299,24 +311,16 @@
     }
    ],
    "source": [
+    "#adding the remaining right thumb prints to the gallery\n",
     "gallery = []\n",
-    "for i in range(1,10):\n",
-    "    img = img_as_ubyte(imread(f'fingerprints/r{i}.bmp', as_gray=True))\n",
-    "    fp = fingerprint_processing(img, block_size=12, threshold=0.1)\n",
-    "    gallery.append(fp)    \n",
+    "\n",
+    "for i in range(1,11):   \n",
+    "    if i!=3:\n",
+    "        gallery_img = img_as_ubyte(imread(f'fingerprints/r{i}.bmp', as_gray=True))\n",
+    "        gallery_fp = fingerprint_processing(gallery_img, block_size=12, threshold=0.1)\n",
+    "        gallery.append(gallery_fp)    \n",
     "    \n",
-    "print(\"gallery initialization completed\")    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f68f0987",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "probe_img = img_as_ubyte(imread('fingerprints/r10.bmp', as_gray=True))\n",
-    "probe_fp = fingerprint_processing(probe_img, block_size=12, threshold=0.1)"
+    "print(\"gallery initialization completed\")      "
    ]
   },
   {
@@ -3452,7 +3456,7 @@
    "outputs": [],
    "source": [
     "score_array = []\n",
-    "probe_img = img_as_ubyte(imread('fingerprints/r10.bmp', as_gray=True))\n",
+    "probe_img = img_as_ubyte(imread('fingerprints/r10.bmp', as_gray=True)) #change to r3 later?\n",
     "for i in range(1,10):\n",
     "    print(f\"matching with gallery index {i}\")\n",
     "    gallery_img = img_as_ubyte(imread(f'fingerprints/r{i}.bmp', as_gray=True))\n",
@@ -3539,7 +3543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
