--- a/lab 5/lab05.ipynb
+++ b/lab 5/lab05.ipynb
@@ -181,6 +181,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "439dbb6e",
+   "metadata": {},
+   "source": [
+    "For this exercise we took 4 sets of parameters, for the first 2 sets of data we kept the angle constant and for the next two we kept the frequency constant.\n",
+    "\n",
+    "We can see that changing the angle changes the orientation of the ridges, so for example in our case we used pi/4(45 degrees) and pi/2(90 degrees) and you can see that the ridges are orienting themselves accordingly. From altering the frequency we see that increasing and decreasing frequency, increases or decreases the number of ridges identified respectively. \n",
+    "\n",
+    "In our case, the best result yeilded when we used pi/4 and 0.15 as parameters as that image shows most ridges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a933392",
    "metadata": {},
    "source": [
