--- a/lab 7/lab07.ipynb
+++ b/lab 7/lab07.ipynb
@@ -2009,6 +2009,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "53fe608a",
+   "metadata": {},
+   "source": [
+    "We compared the accuracy of using 128 nodes and 256 nodes and found that the match rate increased as number of nodes decreased. So increasing the number of nodes does not benefit the accuracy of the model, and we get better results with 128 nodes (1.00 match rate) rather than 256 (0.67 match rate)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "69512c98",
    "metadata": {},
@@ -2155,6 +2164,30 @@
    "source": [
     "CreateCustomModel(dropout_probability=0.6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef93d8db",
+   "metadata": {},
+   "source": [
+    "Increasing the dropout probability produced higher match rates. This is because dropping nodes helps reduce overfitting in the model, and in our case a probability of 0.6 resulted in the model performing better with the test data (0.33 match rate) than with a drop probability of 0.4 (0 match rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241b33b4",
+   "metadata": {},
+   "source": [
+    "## Conclusion:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8108dcb",
+   "metadata": {},
+   "source": [
+    "To conclude, in this lab we used a LSTM model to classify gestures into two classes. Comparing the resulting accuracy difference of using a training size of 60% vs 80%, we found that a larger training set increased the matching score from 0 to 0.25. Next, we evalauted the number of nodes and found that less nodes produced a higher match rate (1.00 for 128 nodes vs 0.67 for 256 nodes). Finally, we found that a higher dropout probability lead to less overfitting and a higher match rate (0.33 with 0.6 probability vs 0 with a 0.4 probability."
+   ]
   }
  ],
  "metadata": {
@@ -2173,7 +2206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
